直播页面增加聊天室, 对密码进行前端加密

--- a/html/home.html
+++ b/html/home.html
@@ -191,7 +191,7 @@
       window.location.href = `${baseURL}/user/login`;
       return;
     }
-    window.location.href = `${baseURL}/live/start`;
+    window.open(`${baseURL}/live/start`, '_blank');
   }
 
   function logout() {
