--- a/html/login.html
+++ b/html/login.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>登录/注册界面</title>
     <link rel="stylesheet" href="../static/css/login.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.0.0/crypto-js.min.js"></script>
 </head>
 <body>
     <div class="container">
