--- a/html/startlive.html
+++ b/html/startlive.html
@@ -4,59 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>开始你的直播</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 0;
-      padding: 0;
-    }
-
-    .container {
-      max-width: 600px;
-      margin: 50px auto;
-      padding: 20px;
-      border: 1px solid #ccc;
-      border-radius: 8px;
-      background-color: #f9f9f9;
-    }
-
-    h2 {
-      text-align: center;
-    }
-
-    label {
-      display: block;
-      margin-top: 10px;
-    }
-
-    input, textarea, button {
-      width: 100%;
-      padding: 10px;
-      margin-top: 5px;
-      border: 1px solid #ccc;
-      border-radius: 4px;
-    }
-
-    button {
-      background-color: #007BFF;
-      color: white;
-      font-weight: bold;
-      cursor: pointer;
-    }
-
-    button:hover {
-      background-color: #0056b3;
-    }
-
-    .info-box {
-      margin-top: 20px;
-      padding: 10px;
-      border: 1px solid #007BFF;
-      border-radius: 4px;
-      background-color: #e8f0fe;
-      word-wrap: break-word;
-    }
-  </style>
+  <link rel="stylesheet" href="../static/css/startlive.css">
 </head>
 <body>
 <div class="container">
@@ -84,95 +32,6 @@
   </div>
 </div>
 
-<script>
-  const baseURL = `${window.location.protocol}//${window.location.hostname}${window.location.port ? ':' + window.location.port : ''}`;
-
-  const backendApi = {
-    startLive: `${baseURL}/live/start`,       // 接口：生成推流密钥
-    streamInfo: (streamName) => `${baseURL}/stream/${streamName}` // 接口：获取拉流信息
-  };
-
-  // Utility function to make authenticated fetch requests
-  async function authenticatedFetch(url, options = {}) {
-    const token = localStorage.getItem("token");
-    if (!token) {
-      alert("你还未登录, 请先登录!");
-      throw new Error("No token found in localStorage");
-    }
-
-    const headers = {
-      ...options.headers,
-      "Authorization": `${token}`,
-      "Content-Type": "application/json"
-    };
-
-    const response = await fetch(url, {
-      ...options,
-      headers
-    });
-
-    if (response.status === 401) {
-      alert("你的登录已经过期, 请再次登录!");
-      throw new Error("Unauthorized");
-    }
-
-    return response;
-  }
-
-  const liveForm = document.getElementById("liveForm");
-  const streamInfo = document.getElementById("streamInfo");
-  const pushUrlElem = document.getElementById("pushUrl");
-  const streamKeyElem = document.getElementById("streamKey");
-  const hlsUrlElem = document.getElementById("hlsUrl");
-  const dashUrlElem = document.getElementById("dashUrl");
-  const playUrlElem = document.getElementById("playUrl");
-
-  liveForm.addEventListener("submit", async (event) => {
-    event.preventDefault();
-
-    const title = document.getElementById("title").value;
-    const description = document.getElementById("description").value;
-
-    try {
-      // Step 1: 请求后端生成推流密钥和流名称
-      const publishResponse = await authenticatedFetch(backendApi.startLive, {
-        method: "POST",
-        body: JSON.stringify({ title, description })
-      });
-
-      if (!publishResponse.ok) {
-        alert("获取串流密钥失败: " + (await publishResponse.text()));
-        return;
-      }
-
-      const publishData = await publishResponse.json();
-      const pushStreamUrl = publishData.push_url;
-      const token = publishData.token;
-
-      // 显示推流地址和密钥
-      pushUrlElem.textContent = pushStreamUrl;
-      streamKeyElem.textContent = token;
-
-      // Step 2: 请求后端获取拉流信息
-      const streamInfoResponse = await authenticatedFetch(backendApi.streamInfo(token));
-      if (!streamInfoResponse.ok) {
-        alert("获取流信息失败: " + (await streamInfoResponse.text()));
-        return;
-      }
-
-      const streamData = await streamInfoResponse.json();
-
-      // 展示拉流信息
-      hlsUrlElem.textContent = streamData.hls_url;
-      dashUrlElem.textContent = streamData.dash_url;
-      playUrlElem.textContent = streamData.play_url;
-
-      streamInfo.style.display = "block";
-    } catch (error) {
-      console.error("Error:", error);
-    }
-  });
-
-</script>
+<script type="text/javascript" src="../static/js/startlive.js"></script>
 </body>
 </html>
